--- a/index.html
+++ b/index.html
@@ -15,15 +15,54 @@
     <title>Frontend Mentor | NFT preview card component</title>
   </head>
   <body>
-    <!-- MAIN -->
-
     <main>
-      Equilibrium #3429 Our Equilibrium collection promotes balance and calm.
-      0.041 ETH 3 days left Creation of Jules Wyvern
+      <div class="container">
+        <div class="card">
+          <img
+            class="card-img"
+            src="./images/image-equilibrium.jpg"
+            alt="NFT Equilibrium"
+          />
+          <div class="card-overlay">
+            <img
+              src="./images/icon-view.svg"
+              alt="Icon View"
+              width="48"
+              height="48"
+            />
+          </div>
+        </div>
+
+        <h1 class="n-white">Equilibrium #3429</h1>
+        <p class="p-blue">
+          Our Equilibrium collection promotes balance and calm.
+        </p>
+
+        <ul class="price">
+          <li class="p-cyan">0.041 ETH</li>
+          <li class="p-blue">3 days left</li>
+        </ul>
+
+        <span class="line"> </span>
+        <div class="creator">
+          <img
+            src="./images/image-avatar.png"
+            alt="Avatar"
+            width="132"
+            height="132"
+          />
+
+          <h2 class="p-blue">
+            Creation of
+            <a
+              class="n-white"
+              href="https://www.frontendmentor.io/profile/correlucas"
+              >Jules Wyvern</a
+            >
+          </h2>
+        </div>
+      </div>
     </main>
-
-    <!-- Footer -->
-
     <footer>
       <div class="attribution">
         Challenge by
