--- a/index.html
+++ b/index.html
@@ -54,11 +54,7 @@
 
           <h2 class="p-blue">
             Creation of
-            <a
-              class="n-white"
-              href="https://www.frontendmentor.io/profile/correlucas"
-              >Jules Wyvern</a
-            >
+            <a class="n-white" href="#">Jules Wyvern</a>
           </h2>
         </div>
       </div>
